# MSet

./: CMSet.cpp  CMakeLists.txt  CTexture.h  CTimer.cpp  CTimer.h  MSet.sln  main.cpp
MSet/: CMSet.cpp  CMSet.h  CTexture.cpp  MSet.cpp  MSet.vcxproj  MSet.vcxproj.filters  main.cpp  stdafx.cpp
